Change cole name

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ links:
   - title: Github
     url: https://github.com/ColeTownsend/Balzac-for-Jekyll
     external: true
-  - title: Cole Who?
+  - title: Alec Who?
     url: http://coletownsend.com
     external: true
 
