--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            Balzac
+title:            Stained Shirt
 tagline:          A beautiful theme.
 description:      Describe your website.
 canonical: http://jekyll.gtat.me
